--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,9 @@
     .display-flex{
         display: flex;
     }  
+    .text-primary{
+        color: #FF900E;
+    }
     .text-gray{
         color: #424242;
     }
@@ -21,7 +24,7 @@
     .bg-light{
         background-color: rgba(255, 144, 14, 0.1);
     }
-    .btn-banner{
+    .btn-primary{
         background-color: #FF900E;
         color: white ;
         padding: 20px 25px;
@@ -29,6 +32,17 @@
         font-weight: 600;
         border-radius: 8px;
         border: none;
+    }
+    .main{
+        max-width: 1440px;
+        margin: 0 auto;
+    }
+    .main > section{
+        margin-top: 130px;
+    }
+    .section-title{
+        font-size: 2.8rem;
+        font-weight: 700;
     }
 
 /* header styles */
@@ -70,10 +84,47 @@
 .banner-image{
          width: 100%;
 }
+/* team and feature related styles */
+
+.teams{
+    align-items: center;
+}
+.team-image-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+
+}
+.our-features{
+   margin-left:  130px;
+   max-width: 530px;
+}
+
+#qucik-list{
+    font-weight: 500;
+}
+
 /* responsiv-midea-quary */
 
     @media screen and (max-width:576px) {
-        .navbar, .nav-link{
+        .navbar, 
+        .nav-link,
+        .teams{
             flex-direction: column;
         }
+        .team-image-container{
+            grid-template-columns: repeat(1,1fr);
+        }
+        .our-features{
+            margin-left: 20px;
+        }
+    }
+    /* meadium size device */
+    @media screen and (min-width: 576px) and (max-width: 992px) {
+         .teams   {
+        flex-direction: column;
+         }    
+         .our-features{
+            margin: 50px auto;
+         }  
     }
