--- a/styles/architects.css
+++ b/styles/architects.css
@@ -44,7 +44,35 @@
         font-size: 2.8rem;
         font-weight: 700;
     }
-
+    /* some -fact reletaed style */
+    .facts-container
+    {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+    }
+    .fact-card{
+        border: 1px solid #FF900E;
+        width: 240px;
+        height: 240px;
+        border-radius: 8px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .fact-number{
+        font-size: 2.8rem;
+        font-weight: 600;
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
+  .fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+  }
+  .fact-description{
+    max-width: 540px;
+  }
 /* header styles */
    
 
@@ -93,6 +121,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
+    
 
 }
 .our-features{
@@ -103,7 +132,19 @@
 #qucik-list{
     font-weight: 500;
 }
-
+/* sponsors related styles */
+.sponsors-info{
+     max-width: 540px;
+     margin: 50px auto;
+     text-align: center;
+}
+.sponsors-companies{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sponsors-companies img{
+    filter: grayscale(100%);
+}
 /* responsiv-midea-quary */
 
     @media screen and (max-width:576px) {
@@ -112,11 +153,23 @@
         .teams{
             flex-direction: column;
         }
-        .team-image-container{
-            grid-template-columns: repeat(1,1fr);
+        .team-image-container, 
+        .facts-container
+        .sponsors-companies
+        {
+            grid-template-columns: repeat(1fr);
         }
+         .facts-container
+         {
+            justify-items: center;
+            gap: 24px;
+         }
         .our-features{
             margin-left: 20px;
+        }
+        .sponsors-companies{
+            justify-items: center;
+            gap: 50px;
         }
     }
     /* meadium size device */
@@ -127,4 +180,12 @@
          .our-features{
             margin: 50px auto;
          }  
+         .sponsors-companies,
+         .facts-container
+         {
+            grid-template-columns: repeat(2,1fr);
+            gap: 50px;
+            justify-items: center;
+         }
+
     }
